<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color">

    <!--Main Screen-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/image"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/dimen_login_logo_margin_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/icon_search" />

                    <com.androcid.zomato.view.custom.MyTextView
                        style="@style/login_start_info_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_login_1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/icon_collections" />

                    <com.androcid.zomato.view.custom.MyTextView
                        style="@style/login_start_info_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_login_2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/icon_bookmark" />

                    <com.androcid.zomato.view.custom.MyTextView
                        style="@style/login_start_info_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_login_3" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <com.androcid.zomato.view.custom.MyTextView
                        android:id="@+id/mainSignUp"
                        style="@style/login_button_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="signUpClick"
                        android:text="Sign Up" />

                    <com.androcid.zomato.view.custom.MyTextView
                        android:id="@+id/mainLogin"
                        style="@style/login_button_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:onClick="logInClick"
                        android:text="Log in" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/facebookLogin"
                    style="@style/facebook_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="facebookClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/com_facebook_button_icon" />

                    <com.androcid.zomato.view.custom.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Continue with Facebook"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sign_in_google"
                    style="@style/google_button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:onClick="googleClick">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/im_google_icon"/>

                    <com.androcid.zomato.view.custom.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Continue with Google"
                        android:textColor="@color/black" />

                </LinearLayout>

               <!-- <com.google.android.gms.common.SignInButton
                    style="@style/button_style"
                    android:id="@+id/sign_in_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>-->

                <com.androcid.zomato.view.custom.MyTextView
                    style="@style/login_footer_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_login_start_footer" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dimen_login_logo"
            android:layout_height="@dimen/dimen_login_logo"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_login_logo_margin"
            android:src="@mipmap/logo" />

        <com.androcid.zomato.view.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/tra_white_border"
            android:clickable="true"
            android:onClick="skipClick"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="SKIP" />

    </RelativeLayout>

</RelativeLayout>
