<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="closeClick"
                    android:padding="10dp"
                    android:src="@drawable/im_close"
                    android:tint="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="set handle"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onDoneClick"
                    android:padding="10dp"
                    android:text="Done"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/shadow_toolbar" />

        </LinearLayout>
        <!--User Details-->
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/account_medium_txt_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_set_handle_details" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_white"
                    android:padding="10dp">

                    <TextView
                        style="@style/account_large_txt_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/at_the_rate" />

                    <EditText
                        android:id="@+id/handle_text"
                        style="@style/account_large_txt_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="eg Pizzaman"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true"
                        android:textColorHint="@color/txt_home_subtitle_color" />

                </LinearLayout>

                <TextView
                    style="@style/account_small_medium_txt_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_set_handle_details_more" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_text_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tra_white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo" />

        <TextView
            style="@style/account_larger_txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AN ERROR OCCURED"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/account_medium_txt_style"
            />

    </LinearLayout>

</RelativeLayout>